# esp-idf-sys-repro

./: Cargo.toml  README.md  flake.nix  sdkconfig.defaults  walter.hpp
.cargo/: config.toml
src/: main.rs
